--- a/Piglatin Translator/Base.lproj/Main.storyboard
+++ b/Piglatin Translator/Base.lproj/Main.storyboard
@@ -18,24 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQ3-U4-Nn8">
-                                <rect key="frame" x="20" y="0.0" width="560" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="G1I-mh-wnq"/>
-                                </constraints>
-                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4dM-26-dA0">
-                                <rect key="frame" x="20" y="40" width="560" height="516"/>
+                                <rect key="frame" x="20" y="20" width="560" height="536"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aH7-Mi-yRB">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="258"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aH7-Mi-yRB" userLabel="Text View - Raw">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="268"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="a0j-XT-EiP"/>
+                                        </connections>
                                     </textView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="YaJ-K6-Yax">
-                                        <rect key="frame" x="0.0" y="258" width="560" height="258"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="YaJ-K6-Yax" userLabel="Text View - Translated">
+                                        <rect key="frame" x="0.0" y="268" width="560" height="268"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -50,20 +47,31 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4dM-26-dA0" secondAttribute="bottom" id="9nS-Ez-diq"/>
-                            <constraint firstItem="4dM-26-dA0" firstAttribute="top" secondItem="wQ3-U4-Nn8" secondAttribute="bottom" id="IEg-u5-iWC"/>
-                            <constraint firstItem="4dM-26-dA0" firstAttribute="top" secondItem="wQ3-U4-Nn8" secondAttribute="bottom" id="NX3-gf-Alw"/>
-                            <constraint firstItem="wQ3-U4-Nn8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Tt6-4o-jnm"/>
+                            <constraint firstItem="4dM-26-dA0" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="NAp-69-JPs"/>
+                            <constraint firstItem="4dM-26-dA0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="PHB-gR-0vO"/>
+                            <constraint firstItem="4dM-26-dA0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="T54-NY-V5C"/>
                             <constraint firstItem="4dM-26-dA0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Zpr-Cy-hHO"/>
-                            <constraint firstItem="wQ3-U4-Nn8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="adg-6f-MJB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wQ3-U4-Nn8" secondAttribute="trailing" id="qTi-90-Ugd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4dM-26-dA0" secondAttribute="bottom" id="oAL-1d-6Pa"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4dM-26-dA0" secondAttribute="trailing" id="u11-c3-W5a"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Zpr-Cy-hHO"/>
+                                <exclude reference="u11-c3-W5a"/>
+                                <exclude reference="9nS-Ez-diq"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="rawTextView" destination="aH7-Mi-yRB" id="NQ6-c8-V3Z"/>
+                        <outlet property="translatedTextView" destination="YaJ-K6-Yax" id="XcL-4J-Qer"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="560" y="429"/>
         </scene>
     </scenes>
 </document>
